manifests/monitoring/jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '14269'
      labels:
        app: jaeger
    spec:
      containers:
      - image: querycapistio/all-in-one:1.20.0
        name: jaeger
        resources:
          limits:
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /
            port: 16686
          initialDelaySeconds: 5
