manifests/monitoring/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - protocol: TCP
    name: query
    port: 16686
  - protocol: UDP
    name: traces
    port: 6831
  - protocol: TCP
    name: configs
    port: 5778
  - protocol: TCP
    name: collector
    port: 14268
