manifests/monitoring/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - jaeger.homelab.dsb.dev
    secretName: jaeger-tls
  rules:
  - host: jaeger.homelab.dsb.dev
    http:
      paths:
      - backend:
          service:
            name: jaeger
            port:
              number: 16686
        path: /
        pathType: Prefix
